Update all image urls to include new flag images in navbar

--- a/england.html
+++ b/england.html
@@ -1,341 +1,303 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tourney:wght@300;400&display=swap"
-      rel="stylesheet"
-    />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tourney:wght@300;400&display=swap"
+    rel="stylesheet">
 
-    <link rel="stylesheet" href="css/style.css" />
-    <title>England</title>
-  </head>
-  <body>
-    <header><h1>England</h1></header>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
 
-    <nav>
-      <ul>
-        <li>
-          <a href="index.html"
-            ><img
-              src="https://upload.wikimedia.org/wikipedia/en/9/96/UEFA_Euro_2020_Logo.svg"
-              alt="Home"
-          /></a>
-        </li>
-        <li>
-          <a href="england.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/england/flag-400.png"
-              alt="English Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="croatia.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png"
-              alt="Croatian Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="scotland.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png"
-              alt="Scottish Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="czech.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png"
-              alt="Czech Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="germany.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/germany/flag-400.png"
-              alt="German Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="ukraine.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png"
-              alt="Ukrainian Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="denmark.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png"
-              alt="Danish Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="italy.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/italy/flag-400.png"
-              alt="Italian Flag"
-          /></a>
-        </li>
-      </ul>
-    </nav>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>England</title>
+</head>
 
-    <section class="england">
-      <div class="player-media">
-        <img
-          src="https://imgur.com/BKDQ62o.jpeg"
-          alt="England Team Collage"
-        />
-        <div class="wrapper">
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/8vkMMXlgPoI"
-            title="YouTube video player"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
+<body>
+  <header>
+    <h1>England</h1>
+  </header>
 
-        <div class="wrapper">
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/RJqimlFcJsM"
-            title="YouTube video player"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
+  <nav>
+    <ul>
+      <li>
+        <a href="index.html">
+          <img src="assets/images/euro_2020_logo.svg" alt="Home">
+        </a>
+      </li>
+      <li>
+        <a href="england.html">
+          <img src="assets/images/flag-england.png" alt="English Flag">
+        </a>
+      </li>
+      <li>
+        <a href="croatia.html">
+          <img src="assets/images/flag-croatia.png" alt="Croatian Flag">
+        </a>
+      </li>
+      <li>
+        <a href="scotland.html">
+          <img src="assets/images/flag-scotland.png" alt="Scottish Flag">
+        </a>
+      </li>
+      <li>
+        <a href="czech.html">
+          <img src="assets/images/flag-czech.png" alt="Czech Flag">
+        </a>
+      </li>
+      <li>
+        <a href="germany.html">
+          <img src="assets/images/flag-germany.png" alt="German Flag">
+        </a>
+      </li>
+      <li>
+        <a href="ukraine.html">
+          <img src="assets/images/flag-ukraine.png" alt="Ukrainian Flag">
+        </a>
+      </li>
+      <li>
+        <a href="denmark.html">
+          <img src="assets/images/flag-denmark.png" alt="Danish Flag">
+        </a>
+      </li>
+      <li>
+        <a href="italy.html">
+          <img src="assets/images/flag-italy.png" alt="Italian Flag">
+        </a>
+      </li>
+    </ul>
+  </nav>
+
+  <section class="england">
+    <div class="player-media">
+      <img src="https://imgur.com/BKDQ62o.jpeg" alt="England Team Collage">
+      <div class="wrapper">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8vkMMXlgPoI" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
 
-      <div class="player-stats">
-        <table>
-          <caption>
-            Goalkeepers
-          </caption>
-          <tr>
-            <th>Player</th>
-            <th>Played</th>
-            <th>Goals Conceeded</th>
-          </tr>
-          <tr>
-            <td>Jordan Pickford</td>
-            <td>7</td>
-            <td>2</td>
-          </tr>
-          <tr>
-            <td>Aaron Ramsdale</td>
-            <td>-</td>
-            <td>-</td>
-          </tr>
-          <tr>
-            <td>Sam Johnstone</td>
-            <td>-</td>
-            <td>-</td>
-          </tr>
-        </table>
-        <table>
-          <caption>
-            Defenders
-          </caption>
-          <tr>
-            <th>Player</th>
-            <th>Played</th>
-            <th>Goals</th>
-            <th>Assists</th>
-          </tr>
-          <tr>
-            <td>Kyle Walker</td>
-            <td>6</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Luke Shaw</td>
-            <td>6</td>
-            <td>1</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>John Stones</td>
-            <td>7</td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Harry Maguire</td>
-            <td>5</td>
-            <td>1</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Kerian Trippier</td>
-            <td>5</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Tyron Mings</td>
-            <td>3</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Conor Coady</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-          </tr>
-          <tr>
-            <td>Ben Chilwell</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-          </tr>
-          <tr>
-            <td>Ben White</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-          </tr>
-          <tr>
-            <td>Reece James</td>
-            <td>1</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-        </table>
-        <table>
-          <caption>
-            Midfielders
-          </caption>
-          <tr>
-            <th>Player</th>
-            <th>Played</th>
-            <th>Goals</th>
-            <th>Assists</th>
-          </tr>
-          <tr>
-            <td>Declan Rice</td>
-            <td>7</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Jack Grealish</td>
-            <td>5</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Jordan Henderson</td>
-            <td>5</td>
-            <td>1</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Kalvin Phillips</td>
-            <td>7</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Jadan Sancho</td>
-            <td>3</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Mason Mount</td>
-            <td>5</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Phil Foden</td>
-            <td>3</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Bukayo Saka</td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Jude Bellingham</td>
-            <td>3</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-        </table>
-        <table>
-          <caption>
-            Forwards
-          </caption>
-          <tr>
-            <th>Player</th>
-            <th>Played</th>
-            <th>Goals</th>
-            <th>Assists</th>
-          </tr>
-          <tr>
-            <td>Harry Kane</td>
-            <td>7</td>
-            <td>4</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Raheem Sterling</td>
-            <td>7</td>
-            <td>3</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Marcus Rashford</td>
-            <td>5</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Dominic Calvert-Lewin</td>
-            <td>2</td>
-            <td>-</td>
-            <td></td>
-          </tr>
-        </table>
+      <div class="wrapper">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/RJqimlFcJsM" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
-    </section>
+    </div>
 
-    <footer>
-      <div>
-        <a href="https://www.youtube.com/user/fatv" target="_blank"
-          ><i class="fab fa-youtube fa-3x"></i
-        ></a>
-        <a href="https://www.github.com/devisis" target="_blank"
-          ><i class="fab fa-github fa-3x"></i
-        ></a>
-        <a href="https://www.facebook.com/EnglandTeam/" target="_blank"
-          ><i class="fab fa-facebook fa-3x"></i
-        ></a>
-      </div>
+    <div class="player-stats">
+      <table>
+        <caption>
+          Goalkeepers
+        </caption>
+        <tr>
+          <th>Player</th>
+          <th>Played</th>
+          <th>Goals Conceeded</th>
+        </tr>
+        <tr>
+          <td>Jordan Pickford</td>
+          <td>7</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Aaron Ramsdale</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>Sam Johnstone</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+      </table>
+      <table>
+        <caption>
+          Defenders
+        </caption>
+        <tr>
+          <th>Player</th>
+          <th>Played</th>
+          <th>Goals</th>
+          <th>Assists</th>
+        </tr>
+        <tr>
+          <td>Kyle Walker</td>
+          <td>6</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Luke Shaw</td>
+          <td>6</td>
+          <td>1</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>John Stones</td>
+          <td>7</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Harry Maguire</td>
+          <td>5</td>
+          <td>1</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Kerian Trippier</td>
+          <td>5</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Tyron Mings</td>
+          <td>3</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Conor Coady</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>Ben Chilwell</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>Ben White</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>Reece James</td>
+          <td>1</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+      </table>
+      <table>
+        <caption>
+          Midfielders
+        </caption>
+        <tr>
+          <th>Player</th>
+          <th>Played</th>
+          <th>Goals</th>
+          <th>Assists</th>
+        </tr>
+        <tr>
+          <td>Declan Rice</td>
+          <td>7</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Jack Grealish</td>
+          <td>5</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Jordan Henderson</td>
+          <td>5</td>
+          <td>1</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Kalvin Phillips</td>
+          <td>7</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Jadan Sancho</td>
+          <td>3</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Mason Mount</td>
+          <td>5</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Phil Foden</td>
+          <td>3</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Bukayo Saka</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Jude Bellingham</td>
+          <td>3</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+      </table>
+      <table>
+        <caption>
+          Forwards
+        </caption>
+        <tr>
+          <th>Player</th>
+          <th>Played</th>
+          <th>Goals</th>
+          <th>Assists</th>
+        </tr>
+        <tr>
+          <td>Harry Kane</td>
+          <td>7</td>
+          <td>4</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Raheem Sterling</td>
+          <td>7</td>
+          <td>3</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Marcus Rashford</td>
+          <td>5</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Dominic Calvert-Lewin</td>
+          <td>2</td>
+          <td>-</td>
+          <td></td>
+        </tr>
+      </table>
+    </div>
+  </section>
 
-      <p>Copyright Devisis 2021</p>
-    </footer>
-  </body>
+  <footer>
+    <div>
+      <a href="https://www.youtube.com/user/fatv" target="_blank"><i class="fab fa-youtube fa-3x"></i></a>
+      <a href="https://www.github.com/devisis" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+      <a href="https://www.facebook.com/EnglandTeam/" target="_blank"><i class="fab fa-facebook fa-3x"></i></a>
+    </div>
+
+    <p>Copyright Devisis 2021</p>
+  </footer>
+</body>
+
 </html>
