--- a/index.html
+++ b/index.html
@@ -1,209 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tourney:wght@300;400&display=swap"
-      rel="stylesheet"
-    />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tourney:wght@300;400&display=swap"
+    rel="stylesheet">
 
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Its Coming Home</title>
-  </head>
-  <body>
-    <header>
-      <h1>Euro 2020</h1>
-      <h1>Its Coming Home</h1>
-    </header>
-    <nav>
-      <ul>
-        <li>
-          <a href="index.html"
-            ><img
-              src="https://upload.wikimedia.org/wikipedia/en/9/96/UEFA_Euro_2020_Logo.svg"
-              alt="Home"
-          /></a>
-        </li>
-        <li>
-          <a href="england.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/england/flag-400.png"
-              alt="English Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="croatia.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png"
-              alt="Croatian Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="scotland.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png"
-              alt="Scottish Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="czech.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png"
-              alt="Czech Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="germany.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/germany/flag-400.png"
-              alt="German Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="ukraine.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png"
-              alt="Ukrainian Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="denmark.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png"
-              alt="Danish Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="italy.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/italy/flag-400.png"
-              alt="Italian Flag"
-          /></a>
-        </li>
-      </ul>
-    </nav>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
 
-    <section class="main">
-      <div id="hero-img"></div>
-      <h2>Timeline of Events</h2>
-      <h3>click the dates to find out more</h3>
-      <div class="match-selector">
-        <div id="cro">
-          <a href="croatia.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png"
-              alt="Croatian Flag"
-            />
-            <h4>13th June</h4>
-            <h4>1 - 0</h4>
-            <h4>Matchday 1</h4></a
-          >
-        </div>
-        <div id="sco">
-          <a href="scotland.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png"
-              alt="Scottish Flag"
-            />
-            <h4>18th June</h4>
-            <h4>0 - 0</h4>
-            <h4>Matchday 2</h4></a
-          >
-        </div>
-        <div id="cze">
-          <a href="czech.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png"
-              alt="Czech Flag"
-            />
-            <h4>22nd June</h4>
-            <h4>1 - 0</h4>
-            <h4>Matchday 3</h4></a
-          >
-        </div>
-        <div id="ger">
-          <a href="germany.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/germany/flag-400.png"
-              alt="German Flag"
-            />
-            <h4>29th June</h4>
-            <h4>2- 0</h4>
-            <h4>Round of 16</h4></a
-          >
-        </div>
-        <div id="ukr">
-          <a href="ukraine.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png"
-              alt="Ukrainian Flag"
-            />
-            <h4>3rd July</h4>
-            <h4>4 - 0</h4>
-            <h4>Quarter Final</h4></a
-          >
-        </div>
-        <div id="den">
-          <a href="denmark.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png"
-              alt="Danish Flag"
-            />
-            <h4>7th July</h4>
-            <h4>2 - 1</h4>
-            <h4>Semi Final</h4></a
-          >
-        </div>
-        <div id="ita">
-          <a href="italy.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/italy/flag-400.png"
-              alt="Italian Flag"
-            />
-            <h4>11th July</h4>
-            <h4>1(2) - 1 (3)</h4>
-            <h4>Final</h4></a
-          >
-        </div>
-        <div id="eng">
-          <a href="england.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/england/flag-400.png"
-              alt="English Flag"
-            />
-            <h4>Three Lions</h4></a
-          >
-        </div>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Its Coming Home</title>
+</head>
+
+<body>
+  <header>
+    <h1>Euro 2020</h1>
+    <h1>Its Coming Home</h1>
+  </header>
+  <nav>
+    <ul>
+      <li>
+        <a href="index.html">
+          <img src="assets/images/euro_2020_logo.svg" alt="Home">
+        </a>
+      </li>
+      <li>
+        <a href="england.html">
+          <img src="assets/images/flag-england.png" alt="English Flag">
+        </a>
+      </li>
+      <li>
+        <a href="croatia.html">
+          <img src="assets/images/flag-croatia.png" alt="Croatian Flag">
+        </a>
+      </li>
+      <li>
+        <a href="scotland.html">
+          <img src="assets/images/flag-scotland.png" alt="Scottish Flag">
+        </a>
+      </li>
+      <li>
+        <a href="czech.html">
+          <img src="assets/images/flag-czech.png" alt="Czech Flag">
+        </a>
+      </li>
+      <li>
+        <a href="germany.html">
+          <img src="assets/images/flag-germany.png" alt="German Flag">
+        </a>
+      </li>
+      <li>
+        <a href="ukraine.html">
+          <img src="assets/images/flag-ukraine.png" alt="Ukrainian Flag">
+        </a>
+      </li>
+      <li>
+        <a href="denmark.html">
+          <img src="assets/images/flag-denmark.png" alt="Danish Flag">
+        </a>
+      </li>
+      <li>
+        <a href="italy.html">
+          <img src="assets/images/flag-italy.png" alt="Italian Flag">
+        </a>
+      </li>
+    </ul>
+  </nav>
+
+  <section class="main">
+    <div id="hero-img"></div>
+    <h2>Timeline of Events</h2>
+    <h3>click the dates to find out more</h3>
+    <div class="match-selector">
+      <div id="cro">
+        <a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag">
+          <h4>13th June</h4>
+          <h4>1 - 0</h4>
+          <h4>Matchday 1</h4>
+        </a>
       </div>
-
-    </section>
-
-    <footer>
-      <div>
-        <a href="https://www.youtube.com/user/fatv" target="_blank"
-          ><i class="fab fa-youtube fa-3x"></i
-        ></a>
-        <a href="https://www.github.com/devisis" target="_blank"
-          ><i class="fab fa-github fa-3x"></i
-        ></a>
-        <a href="https://www.facebook.com/EnglandTeam/" target="_blank"
-          ><i class="fab fa-facebook fa-3x"></i
-        ></a>
+      <div id="sco">
+        <a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png"
+            alt="Scottish Flag">
+          <h4>18th June</h4>
+          <h4>0 - 0</h4>
+          <h4>Matchday 2</h4>
+        </a>
       </div>
+      <div id="cze">
+        <a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png"
+            alt="Czech Flag">
+          <h4>22nd June</h4>
+          <h4>1 - 0</h4>
+          <h4>Matchday 3</h4>
+        </a>
+      </div>
+      <div id="ger">
+        <a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag">
+          <h4>29th June</h4>
+          <h4>2- 0</h4>
+          <h4>Round of 16</h4>
+        </a>
+      </div>
+      <div id="ukr">
+        <a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag">
+          <h4>3rd July</h4>
+          <h4>4 - 0</h4>
+          <h4>Quarter Final</h4>
+        </a>
+      </div>
+      <div id="den">
+        <a href="denmark.html"><img src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Danish Flag">
+          <h4>7th July</h4>
+          <h4>2 - 1</h4>
+          <h4>Semi Final</h4>
+        </a>
+      </div>
+      <div id="ita">
+        <a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag">
+          <h4>11th July</h4>
+          <h4>1(2) - 1 (3)</h4>
+          <h4>Final</h4>
+        </a>
+      </div>
+      <div id="eng">
+        <a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag">
+          <h4>Three Lions</h4>
+        </a>
+      </div>
+    </div>
 
-      <p>Copyright Devisis 2021</p>
-    </footer>
-  </body>
+  </section>
+
+  <footer>
+    <div>
+      <a href="https://www.youtube.com/user/fatv" target="_blank"><i class="fab fa-youtube fa-3x"></i></a>
+      <a href="https://www.github.com/devisis" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+      <a href="https://www.facebook.com/EnglandTeam/" target="_blank"><i class="fab fa-facebook fa-3x"></i></a>
+    </div>
+
+    <p>Copyright Devisis 2021</p>
+  </footer>
+</body>
+
 </html>
