--- a/germany.html
+++ b/germany.html
@@ -1,142 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tourney:wght@300;400&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Germany</title>
-  </head>
-  <body>
-    <header><h1>Germany 0 - 2 England</h1></header>
-    <nav>
-      <ul>
-        <li>
-          <a href="index.html"
-            ><img
-              src="https://upload.wikimedia.org/wikipedia/en/9/96/UEFA_Euro_2020_Logo.svg"
-              alt="Home"
-          /></a>
-        </li>
-        <li>
-          <a href="england.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/england/flag-400.png"
-              alt="English Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="croatia.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png"
-              alt="Croatian Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="scotland.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png"
-              alt="Scottish Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="czech.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png"
-              alt="Czech Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="germany.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/germany/flag-400.png"
-              alt="German Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="ukraine.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png"
-              alt="Ukrainian Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="denmark.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png"
-              alt="Danish Flag"
-          /></a>
-        </li>
-        <li>
-          <a href="italy.html"
-            ><img
-              src="https://cdn.countryflags.com/thumbs/italy/flag-400.png"
-              alt="Italian Flag"
-          /></a>
-        </li>
-      </ul>
-    </nav>
 
-    <section class="opponent">
-      <div id="opp-intro">
-        <h2>Round of 16</h2>
-        <h3>Wembley Stadium</h3>
-        <h4>29th June 2021</h4>
-        <img
-          id="flag"
-          src="https://cdn.countryflags.com/thumbs/germany/flag-400.png"
-          alt="Germany Flag"
-        />
-        <div class="wrapper">
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/RnZBO0YCrYw"
-            title="YouTube video player"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tourney:wght@300;400&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Germany</title>
+</head>
+
+<body>
+  <header>
+    <h1>Germany 0 - 2 England</h1>
+  </header>
+  <nav>
+    <ul>
+      <li>
+        <a href="index.html">
+          <img src="assets/images/euro_2020_logo.svg" alt="Home">
+        </a>
+      </li>
+      <li>
+        <a href="england.html">
+          <img src="assets/images/flag-england.png" alt="English Flag">
+        </a>
+      </li>
+      <li>
+        <a href="croatia.html">
+          <img src="assets/images/flag-croatia.png" alt="Croatian Flag">
+        </a>
+      </li>
+      <li>
+        <a href="scotland.html">
+          <img src="assets/images/flag-scotland.png" alt="Scottish Flag">
+        </a>
+      </li>
+      <li>
+        <a href="czech.html">
+          <img src="assets/images/flag-czech.png" alt="Czech Flag">
+        </a>
+      </li>
+      <li>
+        <a href="germany.html">
+          <img src="assets/images/flag-germany.png" alt="German Flag">
+        </a>
+      </li>
+      <li>
+        <a href="ukraine.html">
+          <img src="assets/images/flag-ukraine.png" alt="Ukrainian Flag">
+        </a>
+      </li>
+      <li>
+        <a href="denmark.html">
+          <img src="assets/images/flag-denmark.png" alt="Danish Flag">
+        </a>
+      </li>
+      <li>
+        <a href="italy.html">
+          <img src="assets/images/flag-italy.png" alt="Italian Flag">
+        </a>
+      </li>
+    </ul>
+  </nav>
+
+  <section class="opponent">
+    <div id="opp-intro">
+      <h2>Round of 16</h2>
+      <h3>Wembley Stadium</h3>
+      <h4>29th June 2021</h4>
+      <img id="flag" src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="Germany Flag">
+      <div class="wrapper">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/RnZBO0YCrYw" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
-      <img
-        id="line-up"
-        src="https://imgur.com/elh7pZy.png"
-        alt="England vs Germany Starting Line Up"
-      />
-      <img
-        id="stats"
-        src="https://imgur.com/vK3qP1d.png"
-        alt="England vs Germany Stats"
-      />
-    </section>
+    </div>
+    <img id="line-up" src="https://imgur.com/elh7pZy.png" alt="England vs Germany Starting Line Up">
+    <img id="stats" src="https://imgur.com/vK3qP1d.png" alt="England vs Germany Stats">
+  </section>
 
-    <footer>
-      <div>
-        <a href="https://www.youtube.com/user/fatv" target="_blank"
-          ><i class="fab fa-youtube fa-3x"></i
-        ></a>
-        <a href="https://www.github.com/devisis" target="_blank"
-          ><i class="fab fa-github fa-3x"></i
-        ></a>
-        <a href="https://www.facebook.com/EnglandTeam/" target="_blank"
-          ><i class="fab fa-facebook fa-3x"></i
-        ></a>
-      </div>
+  <footer>
+    <div>
+      <a href="https://www.youtube.com/user/fatv" target="_blank"><i class="fab fa-youtube fa-3x"></i></a>
+      <a href="https://www.github.com/devisis" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+      <a href="https://www.facebook.com/EnglandTeam/" target="_blank"><i class="fab fa-facebook fa-3x"></i></a>
+    </div>
 
-      <p>Copyright Devisis 2021</p>
-    </footer>
-  </body>
+    <p>Copyright Devisis 2021</p>
+  </footer>
+</body>
+
 </html>
