--- a/croatia.html
+++ b/croatia.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
+
+  <link rel="icon" sizes="192x192" href="assets/images/euro_2020_logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Croatia</title>
 </head>
@@ -75,7 +77,7 @@
       <h2>Matchday - 1</h2>
       <h3>Wembley Stadium</h3>
       <h4>13th June 2021</h4>
-      <img id="flag" src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatia Flag">
+      <img id="flag" src="assets/images/flag-croatia.png" alt="Croatia Flag">
       <div class="wrapper">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/TXtiww4KFw8" title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -83,8 +85,8 @@
         </iframe>
       </div>
     </div>
-    <img id="line-up" src="https://imgur.com/v14x1Kd.jpeg" alt="England vs Croatia Starting Line Up">
-    <img id="stats" src="https://imgur.com/DzRO6vO.jpeg" alt="England vs Croatia Stats">
+    <img id="line-up" src="assets/images/engvscro11.png" alt="England vs Croatia Starting Line Up">
+    <img id="stats" src="assets/images/engcrostats.png" alt="England vs Croatia Stats">
   </section>
 
   <footer>
