--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
 
+  <link rel="icon" sizes="192x192" href="assets/images/euro_2020_logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Its Coming Home</title>
 </head>
@@ -79,58 +80,56 @@
     <h3>click the dates to find out more</h3>
     <div class="match-selector">
       <div id="cro">
-        <a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag">
+        <a href="croatia.html"><img src="assets/images/flag-croatia.png" alt="Croatian Flag">
           <h4>13th June</h4>
           <h4>1 - 0</h4>
           <h4>Matchday 1</h4>
         </a>
       </div>
       <div id="sco">
-        <a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png"
-            alt="Scottish Flag">
+        <a href="scotland.html"><img src="assets/images/flag-scotland.png" alt="Scottish Flag">
           <h4>18th June</h4>
           <h4>0 - 0</h4>
           <h4>Matchday 2</h4>
         </a>
       </div>
       <div id="cze">
-        <a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png"
-            alt="Czech Flag">
+        <a href="czech.html"><img src="assets/images/flag-czech.png" alt="Czech Flag">
           <h4>22nd June</h4>
           <h4>1 - 0</h4>
           <h4>Matchday 3</h4>
         </a>
       </div>
       <div id="ger">
-        <a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag">
+        <a href="germany.html"><img src="assets/images/flag-germany.png" alt="German Flag">
           <h4>29th June</h4>
           <h4>2- 0</h4>
           <h4>Round of 16</h4>
         </a>
       </div>
       <div id="ukr">
-        <a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag">
+        <a href="ukraine.html"><img src="assets/images/flag-ukraine.png" alt="Ukrainian Flag">
           <h4>3rd July</h4>
           <h4>4 - 0</h4>
           <h4>Quarter Final</h4>
         </a>
       </div>
       <div id="den">
-        <a href="denmark.html"><img src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Danish Flag">
+        <a href="denmark.html"><img src="assets/images/flag-denmark.png" alt="Danish Flag">
           <h4>7th July</h4>
           <h4>2 - 1</h4>
           <h4>Semi Final</h4>
         </a>
       </div>
       <div id="ita">
-        <a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag">
+        <a href="italy.html"><img src="assets/images/flag-italy.png" alt="Italian Flag">
           <h4>11th July</h4>
           <h4>1(2) - 1 (3)</h4>
           <h4>Final</h4>
         </a>
       </div>
       <div id="eng">
-        <a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag">
+        <a href="england.html"><img src="assets/images/flag-england.png" alt="English Flag">
           <h4>Three Lions</h4>
         </a>
       </div>
