Add favicon and update asset images for Ukraine

--- a/ukraine.html
+++ b/ukraine.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
+
+  <link rel="icon" sizes="192x192" href="assets/images/euro_2020_logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Ukraine</title>
 </head>
@@ -75,15 +77,15 @@
       <h2>Quarter Final</h2>
       <h3>Stadio Olimpico</h3>
       <h4>3rd July 2021</h4>
-      <img id="flag" src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukraine Flag">
+      <img id="flag" src="assets/images/flag-ukraine.png" alt="Ukraine Flag">
       <div class="wrapper">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/7g6qgbeKUgc" title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
     </div>
-    <img id="line-up" src="https://imgur.com/8GDduYj.png" alt="England vs Ukraine Starting Line Up">
-    <img id="stats" src="https://imgur.com/cPGJnbv.png" alt="England vs Ukraine Stats">
+    <img id="line-up" src="assets/images/engvsukr11.png" alt="England vs Ukraine Starting Line Up">
+    <img id="stats" src="assets/images/engvsukrstats.png" alt="England vs Ukraine Stats">
   </section>
 
   <footer>
