--- a/italy.html
+++ b/italy.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
+
+  <link rel="icon" sizes="192x192" href="assets/images/euro_2020_logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Italy</title>
 </head>
@@ -75,7 +77,7 @@
       <h2>Final</h2>
       <h3>Wembley Stadium</h3>
       <h4>11th July 2021</h4>
-      <img id="flag" src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italy Flag">
+      <img id="flag" src="assets/images/flag-italy.png" alt="Italy Flag">
       <div class="wrapper">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/g-kwLolv--w" title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -84,8 +86,8 @@
       </div>
     </div>
 
-    <img id="line-up" src="https://imgur.com/HzJiHo9.png" alt="England vs Italy Starting Line Up">
-    <img id="stats" src="https://imgur.com/GplQDXf.png" alt="England vs Italy Stats">
+    <img id="line-up" src="assets/images/engvsita11.png" alt="England vs Italy Starting Line Up">
+    <img id="stats" src="assets/images/engvsitastats.png" alt="England vs Italy Stats">
   </section>
 
   <footer>
