--- a/england.html
+++ b/england.html
@@ -14,6 +14,7 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
 
+  <link rel="icon" sizes="192x192" href="assets/images/euro_2020_logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>England</title>
 </head>
@@ -75,7 +76,7 @@
 
   <section class="england">
     <div class="player-media">
-      <img src="https://imgur.com/BKDQ62o.jpeg" alt="England Team Collage">
+      <img src="assets/images/theahleticenglandxi.jpg" alt="England Team Collage">
       <div class="wrapper">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8vkMMXlgPoI" title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
