--- a/denmark.html
+++ b/denmark.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
+
+  <link rel="icon" sizes="192x192" href="assets/images/euro_2020_logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Denmark</title>
 </head>
@@ -75,15 +77,15 @@
       <h2>Semi Final</h2>
       <h3>Wembley Stadium</h3>
       <h4>7th July 2021</h4>
-      <img id="flag" src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Denmark Flag">
+      <img id="flag" src="assets/images/flag-denmark.png" alt="Denmark Flag">
       <div class="wrapper">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/2LiEVZ4tObY" title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
     </div>
-    <img id="line-up" src="https://imgur.com/UfrUqfZ.png" alt="England vs Denmark Starting Line Up">
-    <img id="stats" src="https://imgur.com/om6rVYb.png" alt="England vs Denmark Stats">
+    <img id="line-up" src="assets/images/engvsden11.png" alt="England vs Denmark Starting Line Up">
+    <img id="stats" src="assets/images/engvsdenstats.png" alt="England vs Denmark Stats">
   </section>
 
   <footer>
